[metadata]
name = pytping
version = 0.4.2
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest ping tool
description-file = file: README.md
python_requires = 3.5.x
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/python-ping
download_url = https://github.com/francois-le-ko4la/python-ping.git
license = GPL

[files]
packages = pytping, pytping.cli, pytping.main, pytping.screen, pytping.netnode
extra_files = LICENSE

[options]
python_requires = >=3.6
zip_safe = True
test_suite = tests.*
install_requires = pytconfig>=0.1.7
		   pthread>=0.1.0
	           pycodestyle>=2.3.1
	           setuptools>=39.0.1
dependency_links = https://github.com/francois-le-ko4la/python-config-file/archive/v0.1.7.tar.gz#egg=pytconfig
        	   https://github.com/francois-le-ko4la/python-multithreading/archive/v0.1.0.tar.gz#egg=pthread
setup_requires = pytest-runner
scripts = bin/pyt-ping.py

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
