[metadata]
name = pytping
version = 0.5.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest ping tool
long_description = file: README.md
long_description_content_type="text/markdown"
python_requires = >=3.6
requires-dist = setuptools
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/python-ping
download_url = https://github.com/francois-le-ko4la/python-ping.git
license = GPL
extra_files =
        LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests.*
install_requires =
	wheel>=0.31.0
        setuptools>=39.0.1
        pycodestyle>=2.3.1
        pytconfig>=1.0.0
        pythread>=1.0.0
dependency_links =
        https://github.com/francois-le-ko4la/python-config-file/archive/1.0.0.tar.gz#egg=pytconfig-1.0.0
        https://github.com/francois-le-ko4la/python-multithreading/archive/1.0.0.tar.gz#egg=pythread-1.0.0
setup_requires = pytest-runner
scripts = bin/pyt-ping.py

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
