[metadata]
name = pytping
version = 0.5.2
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest ping tool
long_description = file: README.md
long_description_content_type="text/markdown"
requires-dist = setuptools
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/python-ping
download_url = https://github.com/francois-le-ko4la/python-ping.git
license = GPL
extra_files =
        LICENSE

[options]
python_requires = >=3.6
packages = find:
install_requires =
	wheel>=0.31.0
        setuptools>=39.0.1
        pycodestyle>=2.3.1
	pytconfig>=1.0.0
	pythread>=1.0.0
setup_requires = pytest-runner
test_suite = tests.*
tests_require = pytest
scripts = bin/pyt-ping.py
include_package_data = True
zip_safe = False

[aliases]
test=pytest
release = sdist bdist_wheel

[tool:pytest]
addopts = --verbose
